<resources>
    <string name="app_name">finalProject</string>

    <!--  Main layout  -->
    <string name="title_1">Top Originals and Exclusives</string>
    <string name="title_2">Danh sách ngẫu nhiên</string>
    <string name="title_3">Độc quyền trên MovieNight</string>
    <string name="sample_text">Mô Tả: Anime Demon Slayer: Thanh Gươm Diệt Quỷ còn có tên gọi khác là Lưỡi Gươm Diệt Quỷ hay Yaiba Kimetsu. Phim Thanh Gươm Diệt Quỷ: Kimetsu No Yaiba lấy bối cảnh vào thời Taisho tại Nhật Bản, có một gia đình hai anh em sống nương tựa vào nhau bằng nghề bán than. Nhưng những tháng ngày bình yên đó đã bị phá hủy khi một con quỷ sát hại cả gia đình cậu, chỉ còn duy nhất người em gái Nezuko Kamado nhưng cô lại bị biến thành quỷ. Mang trong mình quyết tâm chữa trị cho em gái, Tanjiro cùng Nezuko bắt đầu cuộc hành trình tìm kiếm tung tích con quỷ đã ra tay với gia đình mình nhằm phá giải lời nguyền. Tanjiro là một người có ý chí kiên định khi không ngừng tìm kiếm cách biến em gái trở lại làm người mặc cho những nguy hiểm chồng chất.
</string>

    <!--  Movie Detail layout  -->
    <string name="title_4">Các phim cùng danh mục</string>

    <!--  Sign Up  -->
    <string name="text_signin_account">Sign In</string>
    <string name="text_description_signin_account">Have an account?</string>
    <string name="signup">Sign Up</string>

    <!--  Sign In  -->
    <string name="login">Sign In</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="donthave_account">Don\'t have an account?</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_title_text">Movie Night</string>


    <!--  Setting Fragment  -->
    <string name="title_account_setting">Account</string>
    <string name="btn_account_setting">Login or Sign Up</string>
    <string name="title_account_version">Version</string>
    <string name="title_account_playback">Playback</string>
    <string name="btn_account_autoplay">Auto Play</string>
    <string name="title_account_company">Company</string>
    <string name="btn_account_about">About</string>

    <string name="watch">XEM NGAY</string>
    <string name="title_activity_searched_movie">SearchedMovieActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="policy">Agree to our terms and conditions</string>
    <string name="back_btn"><![CDATA[<]]></string>

</resources>